--- a/libs/jade/forms/fields-conditional.jade
+++ b/libs/jade/forms/fields-conditional.jade
@@ -6,8 +6,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Forms", href: "index.html#forms"},
+		{title: "Home", href: "/index.html"},
+		{title: "Forms", href: "/index.html#forms"},
 		{title: "Fields"}])
 
 block sidebar
