--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -8,8 +8,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Modules", href: "index.html#modules"},
+		{title: "Home", href: "/index.html"},
+		{title: "Modules", href: "/index.html#modules"},
 		{title: "Content toolbar"}])
 
 block sidebar
