--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -1,14 +1,14 @@
 - var section = "Modules"
 +sidebar([
-	{href: "modules/callout.html", title: "Callout"},
-	{href: "modules/revealable.html", title: "Revealable"},
-	{href: "modules/charts.html", title: "Charts"},
-	{href: "modules/section-notice.html", title: "Section Notices"},
-	{href: "modules/toolbar.html", title: "Content toolbar"},
-	{href: "modules/cookie-monster.html", title: "Cookie Monster"},
-	{href: "modules/notice.html", title: "Browser notice"},
-	{href: "modules/sticky.html", title: "Sticky box"},
-	{href: "modules/extent.html", title: "Extent Switcher"}
+	{href: "callout.html", title: "Callout"},
+	{href: "revealable.html", title: "Revealable"},
+	{href: "charts.html", title: "Charts"},
+	{href: "section-notice.html", title: "Section Notices"},
+	{href: "toolbar.html", title: "Content toolbar"},
+	{href: "cookie-monster.html", title: "Cookie Monster"},
+	{href: "notice.html", title: "Browser notice"},
+	{href: "sticky.html", title: "Sticky box"},
+	{href: "extent.html", title: "Extent Switcher"}
 	//{href: "overlay.html", title: "Modal/Overlay"},
 	//{href: "reference.html", title: "Reference tool"}
 ])
