--- a/libs/jade/branding/cards.jade
+++ b/libs/jade/branding/cards.jade
@@ -6,8 +6,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Branding", href: "index.html#branding"},
+		{title: "Home", href: "/index.html"},
+		{title: "Branding", href: "/index.html#branding"},
 		{title: "Cards"}])
 
 block sidebar
