--- a/libs/jade/dev/adviser/adviser-2.jade
+++ b/libs/jade/dev/adviser/adviser-2.jade
@@ -24,8 +24,8 @@ block section-notice
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Templates", href: "index.html#templates"},
+		{title: "Home", href: "/index.html"},
+		{title: "Templates", href: "/index.html#templates"},
 		{title: "Adviser content – Legislation"}])
 
 block sidebar
