--- a/libs/jade/dev/adviser/adviser-logged-out.jade
+++ b/libs/jade/dev/adviser/adviser-logged-out.jade
@@ -16,8 +16,8 @@ block section-notice
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Templates", href: "index.html#templates"},
+		{title: "Home", href: "/index.html"},
+		{title: "Templates", href: "/index.html#templates"},
 		{title: "Client content"}])
 
 block sidebar
