--- a/libs/jade/dev/adviser/adviser.jade
+++ b/libs/jade/dev/adviser/adviser.jade
@@ -17,8 +17,8 @@ block section-notice
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Templates", href: "index.html#templates"},
+		{title: "Home", href: "/index.html"},
+		{title: "Templates", href: "/index.html#templates"},
 		{title: "Content"}])
 
 block sidebar
