--- a/libs/jade/dev/adviser/advisor.jade
+++ b/libs/jade/dev/adviser/advisor.jade
@@ -7,8 +7,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Templates", href: "index.html#templates"},
+		{title: "Home", href: "/index.html"},
+		{title: "Templates", href: "/index.html#templates"},
 		{title: "Advisor content"}])
 
 block sidebar
