--- a/libs/jade/dev/post-tool/post-tool-4.jade
+++ b/libs/jade/dev/post-tool/post-tool-4.jade
@@ -8,8 +8,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Templates", href: "index.html#templates"},
+		{title: "Home", href: "/index.html"},
+		{title: "Templates", href: "/index.html#templates"},
 		{title: "Content"}])
 
 block content
