--- a/libs/jade/dev/witness-form/witness-self-form-complete.jade
+++ b/libs/jade/dev/witness-form/witness-self-form-complete.jade
@@ -8,8 +8,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Witness Service", href: "index.html#templates"},
+		{title: "Home", href: "/index.html"},
+		{title: "Witness Service", href: "/index.html#templates"},
 		{title: "Referral form"}])
 
 block content
