--- a/libs/jade/forms/field-groups.jade
+++ b/libs/jade/forms/field-groups.jade
@@ -6,8 +6,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Forms", href: "index.html#forms"},
+		{title: "Home", href: "/index.html"},
+		{title: "Forms", href: "/index.html#forms"},
 		{title: "Field groups"}])
 
 block sidebar
