--- a/libs/jade/forms/validation.jade
+++ b/libs/jade/forms/validation.jade
@@ -9,8 +9,8 @@ extends /template/template.jade
 
 block breadcrumbs
     +breadcrumbs([
-        {title: "Home", href: "index.html"},
-        {title: "Forms", href: "index.html#forms"},
+        {title: "Home", href: "/index.html"},
+        {title: "Forms", href: "/index.html#forms"},
         {title: "Validation"}])
 
 block sidebar
