--- a/libs/jade/modules/extent.jade
+++ b/libs/jade/modules/extent.jade
@@ -7,9 +7,9 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Modules", href: "index.html#modules"},
-		{title: "Modals", href: "index.html#modals"},
+		{title: "Home", href: "/index.html"},
+		{title: "Modules", href: "/index.html#modules"},
+		{title: "Modals", href: "/index.html#modals"},
 		{title: "Extent switcher"}])
 
 block sidebar
