--- a/libs/jade/modules/notice.jade
+++ b/libs/jade/modules/notice.jade
@@ -6,8 +6,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Modules", href: "index.html#modules"},
+		{title: "Home", href: "/index.html"},
+		{title: "Modules", href: "/index.html#modules"},
 		{title: "Browser notice"}])
 
 block sidebar
