--- a/libs/jade/styles/grid.jade
+++ b/libs/jade/styles/grid.jade
@@ -5,8 +5,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Styles", href: "index.html#styles"},
+		{title: "Home", href: "/index.html"},
+		{title: "Styles", href: "/index.html#styles"},
 		{title: "Grid layout"}])
 
 block content
