--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -6,8 +6,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
-		{title: "Styles", href: "index.html#styles"},
+		{title: "Home", href: "/index.html"},
+		{title: "Styles", href: "/index.html#styles"},
 		{title: "Colours"}])
 
 block sidebar
