--- a/libs/template/sidebar-forms.jade
+++ b/libs/template/sidebar-forms.jade
@@ -1,8 +1,8 @@
 - var section = "Forms"
 +sidebar([
-	{title: "Buttons", href: "forms/buttons.html"},
-	{title: "Fields", href: "forms/fields.html"},
-	{title: "Field groups", href: "forms/field-groups.html"},
-	{title: "Conditional fields", href: "forms/fields-conditional.html"},
-	{title: "Validation", href: "forms/validation.html"}
+	{title: "Buttons", href: "buttons.html"},
+	{title: "Fields", href: "fields.html"},
+	{title: "Field groups", href: "field-groups.html"},
+	{title: "Conditional fields", href: "fields-conditional.html"},
+	{title: "Validation", href: "validation.html"}
 ])
