Fixed link at the top of sidebars

--- a/libs/template/sidebar-styles.jade
+++ b/libs/template/sidebar-styles.jade
@@ -3,9 +3,5 @@
 	{title: "Typography", href: "typography.html"},
 	{title: "Colours", href: "colours.html"},
 	{title: "Icons", href: "icons.html"},
-	{title: "Tables", href: "tables.html"},
-	//{title: "Grid", href: "new-grid.html"},
-	{title: "Buttons", href: "buttons.html"},
-	{title: "Fields", href: "fields.html"},
-	{title: "Field groups", href: "field-groups.html"}
+	{title: "Tables", href: "tables.html"}
 ])
