Fixed anchor in breadcrumbs

--- a/libs/jade/forms/validation.jade
+++ b/libs/jade/forms/validation.jade
@@ -10,7 +10,7 @@ extends /template/template.jade
 block breadcrumbs
     +breadcrumbs([
         {title: "Home", href: "/index.html"},
-        {title: "Forms", href: "/index.html#forms"},
+        {title: "Forms", href: "/index.html#Forms"},
         {title: "Validation"}])
 
 block sidebar
