--- a/libs/jade/modules/notice.jade
+++ b/libs/jade/modules/notice.jade
@@ -7,7 +7,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Modules", href: "/index.html#modules"},
+		{title: "Modules", href: "/index.html#Modules"},
 		{title: "Browser notice"}])
 
 block sidebar
