--- a/libs/jade/branding/speech-line.jade
+++ b/libs/jade/branding/speech-line.jade
@@ -7,7 +7,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Branding", href: "/index.html#branding"},
+		{title: "Branding", href: "/index.html#Branding"},
 		{title: "Speech line"}])
 
 block sidebar
