--- a/libs/jade/forms/buttons.jade
+++ b/libs/jade/forms/buttons.jade
@@ -7,7 +7,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Forms", href: "/index.html#forms"},
+		{title: "Forms", href: "/index.html#Forms"},
 		{title: "Buttons"}])
 
 block sidebar
