--- a/libs/jade/modules/reference.jade
+++ b/libs/jade/modules/reference.jade
@@ -8,7 +8,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Modules", href: "/index.html#modules"},
+		{title: "Modules", href: "/index.html#Modules"},
 		{title: "Modals", href: "/index.html#modals"},
 		{title: "Reference tool"}])
 
