--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -9,7 +9,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Modules", href: "/index.html#modules"},
+		{title: "Modules", href: "/index.html#Modules"},
 		{title: "Content toolbar"}])
 
 block sidebar
