--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -7,7 +7,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Styles", href: "/index.html#styles"},
+		{title: "Styles", href: "/index.html#Styles"},
 		{title: "Colours"}])
 
 block sidebar
