--- a/libs/jade/styles/new-grid.jade
+++ b/libs/jade/styles/new-grid.jade
@@ -7,7 +7,7 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
-		{title: "Styles", href: "/index.html#styles"},
+		{title: "Styles", href: "/index.html#Styles"},
 		{title: "New grid layout"}])
 
 block sidebar
