Put tools back so it can be used on advisernet

--- a/libs/tools.less
+++ b/libs/tools.less
@@ -90,7 +90,7 @@
 	/* IE styles */
 	@import "base/ie";
 
-	/* Tools specific overrides 
+	/* Tools specific overrides */
 	a {
 		text-decoration: none !important;
 	}
@@ -178,17 +178,5 @@
 	}
 	.table-collapse {
 		display: table-row !important;
-	}
-}*/
-		&.loader {
-			min-height: 100px;
-			background: url('assets/loader.gif') no-repeat left center;
-			@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-				background: url('assets/loader@2x.gif') no-repeat left center;
-				background-size: 30px 30px;
-			}
-		.widget {
-			background-color: @white;
-		}
 	}
 }
