Update typography content

--- a/libs/jade/styles/typography.jade
+++ b/libs/jade/styles/typography.jade
@@ -16,7 +16,7 @@ block sidebar
 block content
 	.articleContent
 		div
-			p The font used is #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] a sans-serif font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.
+			p We use #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] - it’s a sans-serif font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using 4 of these.
 			p When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.
 			p(style="font-weight: 400;") Open Sans 400
 				span.code @font-weight-base
@@ -26,7 +26,7 @@ block content
 				span.code @font-weight-bolder
 			p(style="font-weight: 800;") Open Sans 800
 				span.code @font-weight-boldest
-			p Typographic styles for content specific pages. See #[a(href="#") content guidelines] for how to write content.
+			
 			h1 h1 for page titles
 				span.code @font-size-h1
 			h2 h2 sub header, for section titles
@@ -47,13 +47,13 @@ block content
 			h3 Links
 			.example-box-plain
 				ul
-					li This is a standard text #[a(href="#") with a link] and an external.
-					li This is a standard text #[a.a-external-link(href="#") with an external link].
-					li This is a standard text #[a.a-file-doc(href="#") with a link to an unspecified file].
-					li This is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
-					li This is a standard text #[a.a-word-doc(href="#") with a link to a word document].
-					li This is a standard text #[a.a-excel-doc(href="#") with a link to an excel document].
-					li This is a standard text #[a.a-code-doc(href="#") with a link to a code document].
+					li this is a standard text #[a(href="#") with a link] and an external.
+					li this is a standard text #[a.a-external-link(href="#") with an external link].
+					li this is a standard text #[a.a-file-doc(href="#") with a link to an unspecified file].
+					li this is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
+					li this is a standard text #[a.a-word-doc(href="#") with a link to a word document].
+					li this is a standard text #[a.a-excel-doc(href="#") with a link to an excel document].
+					li this is a standard text #[a.a-code-doc(href="#") with a link to a code document].
 			pre
 				code.language-html
 					| &lt;ul&gt;
