Update colours content

--- a/libs/jade/styles/colours.jade
+++ b/libs/jade/styles/colours.jade
@@ -28,9 +28,9 @@ block content
 			.newrow
 				.span12
 					h3 Colour contrast
-					p The colour contrast ratio for text and interactive elements should be at least 4.5:1 #[a(href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html") as recommended by the W3C].
+					p The colour contrast ratio for text and interactive elements (for example #[a(href="../forms/buttons.html") buttons]) should be at least #[a(href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html") as recommended by the W3C].
 					h3 Brand
-					p Colours as defined in the #[a(href="#") Brand Guidelines]. To be used in pairs as displayed below.
+					p The colours are defined in the #[a(href="https://drive.google.com/file/d/0B8v_MHuoZPI2NmVBVThBSnFSeTQ/view?usp=sharing") Brand Guidelines]. Use them in these pairs.
 			.newrow
 				.span4-sm.span6.swatch.swatch--brand--heritage-blue
 					p Heritage Blue
@@ -78,7 +78,7 @@ block content
 			.newrow
 				.span12
 					h3 Brand tints
-					p There are also variations of some of these swatches in lighter tints.
+					p Here are the brand colours in lighter tints.
 			.newrow
 				.span4-sm.span6.swatch.swatch--beta--heritage-blue-lighter
 					p Heritage Blue Lighter
@@ -104,7 +104,7 @@ block content
 			.newrow
 				.span12
 					h3 Extended palette
-					p Colours to extend the brand into actionable items. These colours shouldn't be used as brand or decorative colours, but purely for system and functional colours. A good example of their use is in form error handling.
+					p These colours shouldn't be used as brand or decorative colours. They’re used for things which are more functional - for example in error notices and call outs. This is because of recognised user behaviour - such as seeing red as a warning.
 			.newrow
 				.span4-sm.span6.swatch.swatch--beta--red
 					p Red
@@ -144,7 +144,7 @@ block content
 			.newrow
 				.span12
 					h3 Extended palette tints
-					p Tint variations of the extended colour palette.
+					p Here are the tint variations of the extended colour palette.
 			.newrow
 				.span4-sm.span6.swatch.swatch--beta--red-light
 					p Red Light
@@ -209,7 +209,7 @@ block content
 			.newrow
 				.span12
 					h3 Monochrome palette
-					p Range for text primarily, but also for neutral colouring.
+					p This palette is mainly for text, but also for neutral colouring.
 			.newrow
 				.span4-sm.span6.swatch.swatch--mono--gray0
 					p Gray 0
