Update fields content

--- a/libs/jade/forms/field-groups.jade
+++ b/libs/jade/forms/field-groups.jade
@@ -16,7 +16,9 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Often two fields can be linked to the same question. This may be because the question has multiple parts to the answer, or the question can be answered in different ways. Using combined form fields allows the user to easily answer the multiple parts of the question at the same time, in a way that looks simple and logical.
+			p Often 2 fields can be linked to the same question. This may be because the question has multiple answers, or the question can be answered in different ways - for example daily/weekly/monthly.
+
+			p Combined form fields allows the user to easily answer the multiple parts of the question at the same time, in a way that looks simple and logical.
 			.example-box-plain
 				fieldset
 					label(for="field") Field group with dropdown
@@ -124,7 +126,7 @@ block content
 					| &lt;/fieldset&gt;
 
 			h2 Date field
-			p With date fields it's important that the question and field type is repeated in the first label, using the #[span.code screenreader] class.
+			p In date fields the question and field type need to be repeated in the first label, using the #[span.code screenreader] class.
 			.example-box-plain
 				.form-group-date
 					legend When did you buy your car?
