--- a/libs/jade/forms/fields.jade
+++ b/libs/jade/forms/fields.jade
@@ -16,10 +16,12 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Forms are an essential medium to help people find the information they need, complete a task or complete an application online. By maintaining the least friction possible between starting and completing the form will ensure greater completion rates for clients with the most accurate information possible.
-			p Only ask for the minimum amount of information for the client to complete the task required, this means that forms are kept shorter, improving completion rate and also trust. Any fields which are optional should be indicated as such.
+			p Forms can help people find the information they need, complete a task or complete an application online. By making forms easy to use will ensure greater completion rates for clients with the most accurate information possible.
+
+			p Ask for the minimum amount of information needed for the client to complete the task, this makes the forms shorter, and improves completion rates. Make clear that optional fields are optional.
+
 			h3 Examples of form components
-			p Using a field for a persons full name is recommended when possible, different cultures structure names in different ways and a Firstname, Surname approach isn't always appropriate.
+			p Use a field for a person’s full name if possible - different cultures structure names in different ways so Firstname, Surname isn't always appropriate.
 
 			.example-box-plain
 				fieldset
