--- a/libs/jade/styles/tables.jade
+++ b/libs/jade/styles/tables.jade
@@ -19,8 +19,9 @@ block script
 block content
 	.articleContent
 		div
-			p Tables are a great way to lay out information that may otherwise be confusing, and can also make information a lot easier to scan. They can however be more difficult for people with accessibility needs, so it's important to only use them where they are needed.
+			p Tables are a great way to lay out information that may otherwise be confusing, and can also make information a lot easier to compare. They can however be more difficult for people with accessibility needs, so it's important to only use them where they are needed.
 			p Putting long form text into a table should generally be avoided.
+
 			h2 Basic table
 			p It's important to use the #[span.code th] tag and #[span.code scope] attribute when defining a table heading. This is for both styling and accessibility.
 			.example-box-plain
@@ -111,7 +112,7 @@ block content
 					| &lt;/table&gt;
 
 			h2 Table with a footer
-			p Footers on tables is important in specific situations. This is easily defined with the #[code.code tfoot] tag. It's important to use this tag for styling and accessibility.
+			p Footers on tables are useful in specific situations. This is easily defined with the #[code.code tfoot] tag. It's important to use this tag for styling and accessibility.
 			p This example also shows right aligned cells, which is useful for numbers.
 			.example-box-plain
 				table
