Update branding content

--- a/libs/jade/branding/brand-icons.jade
+++ b/libs/jade/branding/brand-icons.jade
@@ -16,8 +16,8 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Brand icons differ from the website content icons because they are used illustrate information from and about the Citizens Advice organisation.
-			p They should be used sparingly to maintain importance but are there to support the information.
+			p Brand icons differ from the website content icons because they are used to illustrate information from and about Citizens Advice.
+			p They should be used to support the information.
 
 			table.iconlist.brand
 				thead
