--- a/libs/jade/branding/speech-line.jade
+++ b/libs/jade/branding/speech-line.jade
@@ -16,11 +16,11 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Speech line is a brand asset that is used to highlight a quote or insight from the page.
-			p General rules for speech line
+			p A speech line is a brand asset that is used to highlight a quote or insight.
+			p General rules for a speech line
 			ul
 				li use the same colour text and line
-				li try not to use more than one speech line per page of content.
+				li try not to use more than 1 speech line per page.
 			.speech-lines
 				h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
 				p Quote from William Shakespear 1690
