Added a #{dir} variable to the template to allow us to define per page the relative link of assets. This needs to be at the top of all pages

--- a/libs/jade/dev/adviser/adviser-logged-out.jade
+++ b/libs/jade/dev/adviser/adviser-logged-out.jade
@@ -3,6 +3,7 @@ block settings
 	- var loginheader = true
 	- var sidebar = true
 	- var toolbars = true
+	- var dir = "../../"
 
 extends /template/template.jade
 
