--- a/libs/jade/dev/adviser/adviser-real.jade
+++ b/libs/jade/dev/adviser/adviser-real.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Check if you're eligible for Universal Credit"
 	- var sidebar = true
 	- var toolbars = true
+	- var dir = "../../"
 
 extends /template/template.jade
 
