--- a/libs/jade/forms/validation.jade
+++ b/libs/jade/forms/validation.jade
@@ -4,6 +4,7 @@ block settings
     - var toolbars = true
     //- var cookiemonster = true
     //- var mockup = true
+    - var dir = "../"
 
 extends /template/template.jade
 
