--- a/libs/jade/modules/cookie-monster.jade
+++ b/libs/jade/modules/cookie-monster.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Cookie Monster"
 	- var cookiemonster = true
 	- var sidebar = true
+	- var dir = "../"
 
 extends /template/template.jade
 
