--- a/libs/jade/modules/reference.jade
+++ b/libs/jade/modules/reference.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Reference tool"
 	- var sidebar = true
 	- var toolbars = true
+	- var dir = "../"
 
 extends /template/template.jade
 
