--- a/libs/jade/modules/section-notice-dev.jade
+++ b/libs/jade/modules/section-notice-dev.jade
@@ -1,6 +1,7 @@
 block settings
 	- var title = "Section Notices (development)"
 	- var sidebar = true
+	- var dir = "../"
 
 extends /template/template.jade
 
