--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -3,6 +3,7 @@ block settings
 	- var sidebar = true
 	- var toolbars = true
 	- var sharebar = true
+	- var dir = "../"
 
 extends /template/template.jade
 
