--- a/libs/jade/styles/typography.jade
+++ b/libs/jade/styles/typography.jade
@@ -1,6 +1,7 @@
 block settings
 	- var title = "Typography"
 	- var sidebar = true
+	- var dir = "../"
 
 extends /template/template.jade
 
@@ -26,7 +27,7 @@ block content
 				span.code @font-weight-bolder
 			p(style="font-weight: 800;") Open Sans 800
 				span.code @font-weight-boldest
-			
+
 			h1 h1 for page titles
 				span.code @font-size-h1
 			h2 h2 sub header, for section titles
