--- a/libs/jade/dev/adviser/adviser-2.jade
+++ b/libs/jade/dev/adviser/adviser-2.jade
@@ -4,6 +4,7 @@ block settings
 	- var sidebar = true
 	- var toolbars = true
 	- var toolbarsadviser = true
+	- var dir = "../../"
 
 extends /template/template.jade
 
