--- a/libs/jade/dev/adviser/adviser-tool-logged-out.jade
+++ b/libs/jade/dev/adviser/adviser-tool-logged-out.jade
@@ -3,6 +3,7 @@ block settings
 	- var loginheader = true
 	- var sidebar = true
 	- var toolbars = true
+	- var dir = "../../"
 
 extends /template/template.jade
 
