--- a/libs/jade/dev/adviser/advisor.jade
+++ b/libs/jade/dev/adviser/advisor.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Advisor content"
 	- var sidebar = true
 	- var toolbars = true
+	- var dir = "../../"
 
 extends /template/template.jade
 
