--- a/libs/jade/dev/witness-form/witness-form-4.jade
+++ b/libs/jade/dev/witness-form/witness-form-4.jade
@@ -3,6 +3,7 @@ block settings
 	- var sidebar = true
 	- var toolbars = false
 	- var mockup = true
+	- var dir = "../../"
 
 extends /template/template.jade
 
