--- a/libs/jade/modules/overlay.jade
+++ b/libs/jade/modules/overlay.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Modal/Overlay"
 	- var sidebar = true
 	- var toolbars = true
+	- var dir = "../"
 
 extends /template/template.jade
 
