Fixed breadcrumbs so they now also use #{dir}

--- a/libs/jade/modules/reference.jade
+++ b/libs/jade/modules/reference.jade
@@ -8,9 +8,9 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "/index.html"},
-		{title: "Modules", href: "/index.html#Modules"},
-		{title: "Modals", href: "/index.html#modals"},
+		{title: "Home", href: "#{dir}index.html"},
+		{title: "Modules", href: "#{dir}index.html#Modules"},
+		{title: "Modals", href: "#{dir}index.html#modals"},
 		{title: "Reference tool"}])
 
 block sidebar
