--- a/libs/jade/styles/grid.jade
+++ b/libs/jade/styles/grid.jade
@@ -6,8 +6,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "/index.html"},
-		{title: "Styles", href: "/index.html#Styles"},
+		{title: "Home", href: "#{dir}index.html"},
+		{title: "Styles", href: "#{dir}index.html#Styles"},
 		{title: "Grid layout"}])
 
 block content
