--- a/libs/jade/dev/adviser/adviser-real.jade
+++ b/libs/jade/dev/adviser/adviser-real.jade
@@ -16,8 +16,8 @@ block section-notice
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "/index.html"},
-		{title: "Templates", href: "/index.html#templates"},
+		{title: "Home", href: "#{dir}index.html"},
+		{title: "Templates", href: "#{dir}index.html#templates"},
 		{title: "Adviser content"}])
 
 block sidebar
