--- a/libs/jade/dev/post-tool/post-tool.jade
+++ b/libs/jade/dev/post-tool/post-tool.jade
@@ -9,8 +9,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "/index.html"},
-		{title: "Templates", href: "/index.html#templates"},
+		{title: "Home", href: "#{dir}index.html"},
+		{title: "Templates", href: "#{dir}index.html#templates"},
 		{title: "Content"}])
 
 block content
