--- a/libs/jade/forms/validation.jade
+++ b/libs/jade/forms/validation.jade
@@ -10,8 +10,8 @@ extends /template/template.jade
 
 block breadcrumbs
     +breadcrumbs([
-        {title: "Home", href: "/index.html"},
-        {title: "Forms", href: "/index.html#Forms"},
+        {title: "Home", href: "#{dir}index.html"},
+        {title: "Forms", href: "#{dir}index.html#Forms"},
         {title: "Validation"}])
 
 block sidebar
