--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -9,8 +9,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "/index.html"},
-		{title: "Modules", href: "/index.html#Modules"},
+		{title: "Home", href: "#{dir}index.html"},
+		{title: "Modules", href: "#{dir}index.html#Modules"},
 		{title: "Content toolbar"}])
 
 block sidebar
