The last commit was definitely not a fix, but this one is

--- a/libs/jade/dev/adviser/adviser-logged-out.jade
+++ b/libs/jade/dev/adviser/adviser-logged-out.jade
@@ -17,8 +17,8 @@ block section-notice
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "#{dir}index.html"},
-		{title: "Templates", href: "#{dir}index.html#templates"},
+		{title: "Home", href: dir + "index.html"},
+		{title: "Templates", href: dir + "index.html#templates"},
 		{title: "Client content"}])
 
 block sidebar
