--- a/libs/jade/dev/adviser/advisor.jade
+++ b/libs/jade/dev/adviser/advisor.jade
@@ -8,8 +8,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "#{dir}index.html"},
-		{title: "Templates", href: "#{dir}index.html#templates"},
+		{title: "Home", href: dir + "index.html"},
+		{title: "Templates", href: dir + "index.html#templates"},
 		{title: "Advisor content"}])
 
 block sidebar
