--- a/libs/jade/modules/descriptions.jade
+++ b/libs/jade/modules/descriptions.jade
@@ -7,8 +7,8 @@ extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "#{dir}index.html"},
-		{title: "Modules", href: "#{dir}index.html#Modules"},
+		{title: "Home", href: dir + "index.html"},
+		{title: "Modules", href: dir + "index.html#Modules"},
 		{title: "Descriptions"}])
 
 block sidebar
