--- a/libs/jade/dev/adviser/adviser.jade
+++ b/libs/jade/dev/adviser/adviser.jade
@@ -18,8 +18,8 @@ block section-notice
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "#{dir}index.html"},
-		{title: "Templates", href: "#{dir}index.html#templates"},
+		{title: "Home", href: dir + "index.html"},
+		{title: "Templates", href: dir + "index.html#templates"},
 		{title: "Content"}])
 
 block sidebar
